fix an issue where sprite not showing properly

--- a/projects/5-DinoGame/style.css
+++ b/projects/5-DinoGame/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: #222;
+  color: gold;
 }
 
 canvas {
